feat: glue supabase rbac onto frontend api passthrough
to establish the view that will be shown by the ui
