# packages/functions/cmd/goapi/api/impl.go
@@ -38,13 +38,22 @@ func (s Server) DeleteObjects(ctx context.Context, request DeleteObjectsRequestO
 		return DeleteObjects200Response{}, nil
 	}
 
+	keys := make([]string, 0, len(request.Body.Keys))
+	for _, ref := range request.Body.Keys {
+		key, err := resolveObjectKeyFromRef(ref)
+		if err != nil {
+			return nil, err
+		}
+		keys = append(keys, key)
+	}
+
 	client, err := s3Actions.NewS3Client(ctx)
 	if err != nil {
 		return nil, err
 	}
 
 	bypass := request.Params.BypassGovernance != nil && *request.Params.BypassGovernance
-	err = bucketBasics.BucketBasics{S3Client: client}.DeleteObjects(ctx, request.BucketName, request.Body.Keys, bypass)
+	err = bucketBasics.BucketBasics{S3Client: client}.DeleteObjects(ctx, request.BucketName, keys, bypass)
 	if err != nil {
 		var noBucket *types.NoSuchBucket
 		if errors.As(err, &noBucket) {
@@ -84,8 +93,14 @@ func (s Server) ListObjects(ctx context.Context, request ListObjectsRequestObjec
 }
 
 func (s Server) UploadObject(ctx context.Context, request UploadObjectRequestObject) (UploadObjectResponseObject, error) {
-	if request.Params.Key == "" {
-		return nil, errors.New("key query parameter is required")
+	objectKey, err := resolveObjectKeyFromQueryParams(
+		request.Params.UserId,
+		request.Params.StorageObjectId,
+		request.Params.StorageObjectDataId,
+		request.Params.FileName,
+	)
+	if err != nil {
+		return nil, err
 	}
 	if request.Body == nil {
 		return nil, errors.New("multipart body is required")
@@ -103,7 +118,7 @@ func (s Server) UploadObject(ctx context.Context, request UploadObjectRequestObj
 	}
 
 	err = bucketBasics.BucketBasics{S3Client: client}.UploadFromReader(
-		ctx, request.BucketName, request.Params.Key, filePart, size,
+		ctx, request.BucketName, objectKey, filePart, size,
 	)
 	if err != nil {
 		var apiErr smithy.APIError
@@ -116,6 +131,16 @@ func (s Server) UploadObject(ctx context.Context, request UploadObjectRequestObj
 }
 
 func (s Server) DeleteSingleObject(ctx context.Context, request DeleteSingleObjectRequestObject) (DeleteSingleObjectResponseObject, error) {
+	objectKey, err := resolveObjectKeyFromQueryParams(
+		request.Params.UserId,
+		request.Params.StorageObjectId,
+		request.Params.StorageObjectDataId,
+		request.Params.FileName,
+	)
+	if err != nil {
+		return nil, err
+	}
+
 	client, err := s3Actions.NewS3Client(ctx)
 	if err != nil {
 		return nil, err
@@ -128,7 +153,7 @@ func (s Server) DeleteSingleObject(ctx context.Context, request DeleteSingleObje
 	bypass := request.Params.BypassGovernance != nil && *request.Params.BypassGovernance
 
 	err = s3Actions.S3Actions{S3Client: client}.DeleteObject(
-		ctx, request.BucketName, request.Params.Key, versionID, bypass,
+		ctx, request.BucketName, objectKey, versionID, bypass,
 	)
 	if err != nil {
 		var apiErr smithy.APIError
@@ -141,12 +166,22 @@ func (s Server) DeleteSingleObject(ctx context.Context, request DeleteSingleObje
 }
 
 func (s Server) DownloadObject(ctx context.Context, request DownloadObjectRequestObject) (DownloadObjectResponseObject, error) {
+	objectKey, err := resolveObjectKeyFromQueryParams(
+		request.Params.UserId,
+		request.Params.StorageObjectId,
+		request.Params.StorageObjectDataId,
+		request.Params.FileName,
+	)
+	if err != nil {
+		return nil, err
+	}
+
 	client, err := s3Actions.NewS3Client(ctx)
 	if err != nil {
 		return nil, err
 	}
 
-	result, err := bucketBasics.BucketBasics{S3Client: client}.GetObject(ctx, request.BucketName, request.Params.Key)
+	result, err := bucketBasics.BucketBasics{S3Client: client}.GetObject(ctx, request.BucketName, objectKey)
 	if err != nil {
 		var noKey *types.NoSuchKey
 		if errors.As(err, &noKey) {
@@ -158,14 +193,29 @@ func (s Server) DownloadObject(ctx context.Context, request DownloadObjectReques
 	return utils.DownloadObjectResponse{
 		Body:          result.Body,
 		ContentLength: aws.ToInt64(result.ContentLength),
-		ContentType:   utils.ContentTypeForObject(request.Params.Key, result.ContentType),
-		Filename:      utils.ObjectFilename(request.Params.Key),
+		ContentType:   utils.ContentTypeForObject(request.Params.FileName, result.ContentType),
+		Filename:      utils.ObjectFilename(request.Params.FileName),
 	}, nil
 }
 
 func (s Server) CopyObject(ctx context.Context, request CopyObjectRequestObject) (CopyObjectResponseObject, error) {
 	if request.Body == nil {
 		return nil, errors.New("request body is required")
+	}
+
+	sourceKey, err := resolveObjectKeyFromQueryParams(
+		request.Params.UserId,
+		request.Params.StorageObjectId,
+		request.Params.StorageObjectDataId,
+		request.Params.FileName,
+	)
+	if err != nil {
+		return nil, err
+	}
+
+	destinationKey, err := resolveObjectKeyFromCopyDestination(*request.Body)
+	if err != nil {
+		return nil, err
 	}
 
 	client, err := s3Actions.NewS3Client(ctx)
@@ -177,8 +227,8 @@ func (s Server) CopyObject(ctx context.Context, request CopyObjectRequestObject)
 		ctx,
 		request.BucketName,
 		request.Body.DestinationBucket,
-		request.Params.Key,
-		request.Body.DestinationKey,
+		sourceKey,
+		destinationKey,
 	)
 	if err != nil {
 		var notActive *types.ObjectNotInActiveTierError
